--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -76,6 +76,21 @@ jobs:
         working-directory: ./fly/serve
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-consumer:
+    runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/consumer
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-indexer:
     runs-on: ubuntu-latest
     needs:
@@ -128,6 +143,7 @@ jobs:
       - fly-deploy-grafana
       - fly-deploy-rpc
       - fly-deploy-serve
+      - fly-deploy-consumer
       - fly-deploy-indexer
       - fly-deploy-indexer-sepolia
       - fly-deploy-log-shipper
@@ -137,5 +153,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-indexer,fly-deploy-indexer-sepolia,fly-deploy-log-shipper
+          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-consumer,fly-deploy-indexer,fly-deploy-indexer-sepolia,fly-deploy-log-shipper
           jobs: ${{ toJSON(needs) }}
