--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -15,3 +15,4 @@
   lightdotso-prisma = { workspace = true }
   prisma-client-rust = { workspace = true }
   tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
+  tracing = { workspace = true }
