--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -16,3 +16,4 @@
   prisma-client-rust = { workspace = true }
   tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
   tracing = { workspace = true }
+  tracing-futures = { workspace = true }
