--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "changeset": "changeset",
     "deploy:checkly": "checkly deploy",
     "dev:prisma": "make docker-compose-up",
+    "dev:prisma:studio": "pnpm run studio:dev --filter @lightdotso/prisma",
     "e2e:api:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3000 playwright test --project=@lightdotso/api",
     "e2e:app:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3001 playwright test --project=@lightdotso/app",
     "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
@@ -37,7 +38,7 @@
     "lint": "concurrently \"pnpm:*:lint\"",
     "lint:turbo": "turbo run lint",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages ./pods",
-    "pnpm:upgrade": "pnpm update --latest --recursive \"!solc\"",
+    "pnpm:upgrade": "pnpm update --latest --recursive \"!solc\" \"!@next-auth/prisma-adapter\"",
     "prepare": "husky install",
     "prettier:cmd": "prettier",
     "prettier:fix": "prettier --write .",
@@ -57,6 +58,7 @@
     "test:coverage": "vitest --coverage --single-thread",
     "test:typecheck": "vitest typecheck",
     "test:ui": "vitest dev --ui",
+    "tsc:lint": "tsc --noEmit",
     "wagmi:generate": "wagmi generate"
   },
   "dependencies": {
@@ -66,11 +68,11 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@commitlint/config-conventional": "^17.6.7",
-    "@evmts/config": "^0.6.0",
+    "@evmts/config": "^0.7.0",
     "@evmts/core": "^0.6.0",
-    "@evmts/ts-plugin": "^0.6.0",
-    "@evmts/vite-plugin": "^0.6.0",
-    "@evmts/webpack-plugin": "^0.6.0",
+    "@evmts/ts-plugin": "^0.7.1",
+    "@evmts/vite-plugin": "^0.7.1",
+    "@evmts/webpack-plugin": "^0.7.1",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
     "@lightdotso/solutions": "workspace:*",
@@ -84,35 +86,35 @@
     "@openzeppelin/contracts": "^4.9.3",
     "@playwright/test": "^1.36.2",
     "@release-it/keep-a-changelog": "^4.0.0",
-    "@swc/core": "^1.3.72",
+    "@swc/core": "^1.3.75",
     "@taplo/cli": "^0.5.2",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.5",
-    "@types/react": "^18.2.17",
+    "@types/node": "^20.4.9",
+    "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "@viem/anvil": "0.0.6",
-    "@vitest/coverage-v8": "^0.33.0",
-    "@vitest/ui": "^0.33.0",
+    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/ui": "^0.34.1",
     "@wagmi/cli": "^1.3.0",
     "abitype": "^0.9.6",
     "autoprefixer": "^10.4.14",
     "chai": "^4.3.7",
-    "checkly": "^4.0.12",
+    "checkly": "^4.0.14",
     "commitlint": "^17.6.7",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
-    "esbuild": "^0.18.17",
+    "esbuild": "^0.19.0",
     "eslint": "^8.46.0",
-    "eslint-config-next": "^13.4.12",
-    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-next": "^13.4.13",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-turbo": "^1.10.12",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-editorconfig": "^4.0.3",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jsonc": "^2.9.0",
@@ -123,34 +125,34 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "3.13.0",
     "git-cz": "^4.9.0",
-    "hardhat": "^2.17.0",
+    "hardhat": "^2.17.1",
     "husky": "^8.0.3",
-    "inngest-cli": "^0.15.6",
+    "inngest-cli": "^0.16.1",
     "license-check-and-add": "^4.0.5",
     "lint-staged": "^13.2.3",
-    "neonctl": "^1.18.2",
+    "neonctl": "^1.19.1",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
     "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "release-it": "^16.1.3",
     "rimraf": "^5.0.1",
-    "solhint": "^3.4.1",
+    "solhint": "^3.5.1",
     "solidity-docgen": "0.6.0-beta.35",
     "sort-package-json": "^2.5.1",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
-    "tsup": "^7.1.0",
+    "tsup": "^7.2.0",
     "turbo": "^1.10.12",
     "typescript": "^5.1.6",
-    "vercel": "^31.2.0",
-    "viem": "^1.4.2",
-    "vite": "^4.4.7",
+    "vercel": "^31.2.3",
+    "viem": "^1.5.4",
+    "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0",
+    "vitest": "^0.34.1",
     "vitest-solidity-coverage": "^0.1.3"
   },
   "packageManager": "pnpm@8.6.9"
