--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@
 [workspace.dependencies]
   anyhow = "1.0.71"
   anvil = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
+  autometrics = { version = "*" }
   axum = "0.6.18"
   byteorder = "1.4.3"
   chrono = "0.4.26"
@@ -57,6 +58,7 @@
   foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
   futures = "0.3.28"
   http = "0.2.8"
+  js-sys = "=0.3.56"
   lazy_static = "1.4.0"
   lightdotso-bundler = { path = "./crates/bundler" }
   lightdotso-consumer = { path = "./crates/consumer" }
