--- a/fly/indexer/fly.toml
+++ b/fly/indexer/fly.toml
@@ -34,3 +34,7 @@ kill_timeout = "5s"
     grace_period = "30s"
     method = "get"
     path = "/health"
+
+[metrics]
+  port = 3002
+  path = "/metrics"
