perf: ini prometheus

--- a/.github/workflows/am.yml
+++ b/.github/workflows/am.yml
@@ -1,4 +1,4 @@
-name: Android
+name: Autometrics
 on:
   push:
     branches:
@@ -11,7 +11,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 jobs:
-  build:
+  autometrics:
     runs-on: ubuntu-latest
     timeout-minutes: 3
     permissions:
