--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -29,11 +29,11 @@
     "@prisma/client": "^5.1.1",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
-    "@tanstack/react-query-next-experimental": "5.0.0-alpha.80",
-    "@trpc/client": "^10.37.1",
-    "@trpc/next": "^10.37.1",
-    "@trpc/react-query": "^10.37.1",
-    "@trpc/server": "^10.37.1",
+    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@trpc/client": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/next": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/react-query": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/server": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
     "connectkit": "^1.5.0",
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.13",
