--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -76,6 +76,7 @@
     "**/_next/**",
     "**/*.appex/**",
     "**/*.xcframework/**",
+    "**/.autometrics/**",
     "**/.build/**",
     "**/.gradle/**",
     "**/.idea/**",
