--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "@trpc-limiter/core": "^0.0.8",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/next": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/server": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
     "inngest": "^2.4.0",
