feat: ini experimental query (#336)
* feat: ini client siwe

* feat: ini connectkit siwe

* chore: update

* chore: update

* feat: ini experimental next react query

* chore: update trpc experimental

Closes: #335

* chore: upgrade types

* chore: update

* Apply automatic changes

* chore: update

* chore: update

* chore: ini auth

* chore: update

---------

Co-authored-by: shunkakinoki <shunkakinoki@users.noreply.github.com>

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -27,13 +27,13 @@
     "@lightdotso/ui": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@prisma/client": "^5.1.1",
-    "@tanstack/react-query": "^4.32.6",
-    "@tanstack/react-query-devtools": "^4.32.6",
-    "@tanstack/react-query-next-experimental": "5.0.0-alpha.80",
-    "@trpc/client": "^10.37.1",
-    "@trpc/next": "^10.37.1",
-    "@trpc/react-query": "^10.37.1",
-    "@trpc/server": "^10.37.1",
+    "@tanstack/react-query": "^5.0.0-beta.9",
+    "@tanstack/react-query-devtools": "^5.0.0-beta.9",
+    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@trpc/client": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/next": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/react-query": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/server": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
     "connectkit": "^1.5.0",
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.13",
@@ -46,14 +46,14 @@
     "siwe": "^2.1.4",
     "superjson": "^1.13.1",
     "viem": "^1.5.4",
-    "wagmi": "^1.3.9"
+    "wagmi": "^1.3.10"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.4.9",
-    "@types/react": "^18.2.19",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
