--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "@trpc-limiter/core": "^0.0.8",
-    "@trpc/next": "^10.37.1",
-    "@trpc/server": "^10.37.1",
+    "@trpc/next": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/server": "^10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
     "inngest": "^2.4.0",
@@ -43,7 +43,7 @@
     "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.4.9",
-    "@types/react": "^18.2.19",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/swagger-ui-react": "^4.18.0",
     "autoprefixer": "^10.4.14",
