--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lightdotso/web",
+  "name": "@lightdotso/explorer",
   "version": "1.1.0-pre.2",
   "private": false,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
