--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -19,9 +19,34 @@
     "start": "next start"
   },
   "dependencies": {
+    "@lightdotso/auth": "workspace:*",
+    "@lightdotso/kysely": "workspace:*",
+    "@lightdotso/prisma": "workspace:*",
+    "@lightdotso/styles": "workspace:*",
+    "@lightdotso/trpc": "workspace:*",
+    "@lightdotso/ui": "workspace:*",
+    "@next-auth/prisma-adapter": "0.4.4-canary.81",
+    "@prisma/client": "^5.1.1",
+    "@tanstack/react-query": "^5.0.0-beta.9",
+    "@tanstack/react-query-devtools": "^5.0.0-beta.9",
+    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "connectkit": "^1.5.0",
+    "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.13",
+    "next-auth": "^4.22.5",
+    "postgres": "^3.3.5",
+    "prisma": "^5.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "server-only": "^0.0.1",
+    "siwe": "^2.1.4",
+    "superjson": "^1.13.1",
+    "viem": "^1.5.4",
+    "wagmi": "^1.3.10"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
