--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "concurrently \"pnpm:*:lint\"",
     "lint:turbo": "turbo run lint",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages ./pods",
-    "pnpm:upgrade": "pnpm update --latest --recursive \"!solc\" \"!@next-auth/prisma-adapter\"",
+    "pnpm:upgrade": "pnpm update --latest --recursive \"!solc\" \"!@next-auth/prisma-adapter\" \"next-auth\" \"!@trpc/*\"",
     "prepare": "husky install",
     "prettier:cmd": "prettier",
     "prettier:fix": "prettier --write .",
