fix: instumental hook

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -26,6 +26,11 @@
     "@lightdotso/trpc": "workspace:*",
     "@lightdotso/ui": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.41.2",
+    "@opentelemetry/resources": "^1.15.2",
+    "@opentelemetry/sdk-node": "^0.41.2",
+    "@opentelemetry/sdk-trace-node": "^1.15.2",
+    "@opentelemetry/semantic-conventions": "^1.15.2",
     "@prisma/client": "^5.1.1",
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
