--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -10,7 +10,8 @@
         "NEXTAUTH_SECRET",
         "NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID",
         "NEXT_PUBLIC_SIGNIN_MESSAGE",
-        "NEXT_PUBLIC_VERCEL_URL"
+        "NEXT_PUBLIC_VERCEL_URL",
+        "NEXT_RUNTIME"
       ],
       "inputs": ["app/**", "pages/**", "src/**"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
