--- a/apps/changelog/package.json
+++ b/apps/changelog/package.json
@@ -19,6 +19,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.22.10",
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
