--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@code-hike/lighter": "^0.7.1",
     "@hookform/resolvers": "^2.9.11",
+    "@lightdotso/ui": "workspace:*",
+    "@lightdotso/utils": "workspace:*",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
@@ -40,6 +42,7 @@
     "@types/react-dom": "^18.2.4",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.1.1",
+    "lucide-react": "^0.263.1",
     "next": "^13.4.13",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
