--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -35,6 +35,7 @@
     "@lightdotso/prisma": "workspace:*",
     "@lightdotso/styles": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
+    "@lightdotso/ui": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
