--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -12,6 +12,11 @@
   },
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -22,16 +27,24 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@babel/core": "^7.22.10",
     "@code-hike/lighter": "^0.7.1",
     "@hookform/resolvers": "^2.9.11",
+    "@lightdotso/auth": "workspace:*",
+    "@lightdotso/kysely": "workspace:*",
+    "@lightdotso/prisma": "workspace:*",
+    "@lightdotso/styles": "workspace:*",
+    "@lightdotso/trpc": "workspace:*",
     "@lightdotso/ui": "workspace:*",
     "@lightdotso/utils": "workspace:*",
+    "@next-auth/prisma-adapter": "0.4.4-canary.81",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^5.0.0-beta.9",
+    "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
     "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
@@ -51,17 +64,21 @@
     "superjson": "^1.12.4",
     "tailwind-merge": "^1.5.1",
     "tailwindcss-animate": "^1.0.6",
-    "trpc-api": "link:./src/trpc",
     "typescript": "^5.1.3",
     "zod": "^3.0.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.26.1",
-    "@tanstack/react-query-devtools": "^5.0.0-beta.9",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
+    "@lightdotso/eslint-config": "workspace:*",
+    "@lightdotso/tailwindcss": "workspace:*",
+    "@lightdotso/tsconfig": "workspace:*",
+    "@types/node": "^20.4.9",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
     "start-server-and-test": "^1.12.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
     "wait-port": "^1.0.1"
   }
 }
