--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
     "@lightdotso/styles": "workspace:*",
+    "@lightdotso/trpc": "workspace:*",
     "@lightdotso/utils": "workspace:*",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -51,9 +52,17 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@storybook/addon-styling": "^1.3.6",
+    "@tanstack/react-query": "^5.0.0-beta.9",
+    "@tanstack/react-query-devtools": "^5.0.0-beta.9",
+    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "connectkit": "^1.5.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.263.1",
     "next": "^13.4.13",
@@ -61,9 +70,11 @@
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "vite": "^4.4.9",
+    "wagmi": "^1.3.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
