--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 3
     permissions:
-      contents: write
+      issues: write
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
