--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -14,7 +14,7 @@
   "author": "Light, Inc.",
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -p 3003",
     "lint": "next lint",
     "start": "next start"
   },
