--- a/packages/trpc/turbo.json
+++ b/packages/trpc/turbo.json
@@ -4,7 +4,13 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "env": ["NODE_ENV", "PORT", "NEXT_PUBLIC_VERCEL_URL", "VERCEL_URL"],
+      "env": [
+        "PORT",
+        "NEXTAUTH_URL",
+        "NEXT_PUBLIC_VERCEL_URL",
+        "NODE_ENV",
+        "VERCEL_URL"
+      ],
       "inputs": ["src/**", "index.ts"],
       "outputs": ["dist/**"]
     },
