--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -116,11 +116,12 @@ jobs:
       - e2e-filter
       - e2e-api
       - e2e-app
+      - e2e-playground
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: e2e-api,e2e-app
+          allowed-skips: e2e-api,e2e-app,e2e-playground
           jobs: ${{ toJSON(needs) }}
