--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:test": "concurrently \"pnpm:*:compile\"",
     "build:turbo": "turbo run build",
     "changeset": "changeset",
+    "depcheck:lint": "pnpm -r exec depcheck .",
     "deploy:checkly": "checkly deploy",
     "dev:prisma": "make docker-compose-up",
     "dev:prisma:studio": "pnpm run studio:dev --filter @lightdotso/prisma",
@@ -38,6 +39,10 @@
     "license:lint": "license-check-and-add -f .license-check-and-add-config.json check",
     "lint": "concurrently \"pnpm:*:lint\"",
     "lint:turbo": "turbo run lint",
+    "ncu:check": "ncu--packageFile '{apps,configurations,packages}/**/package.json'",
+    "ncu:monorepo": "ncu --packageFile '{apps,configurations,packages}/**/package.json' -u",
+    "ncu:root": "ncu --packageFile package.json -u",
+    "ncu:upgrade": "pnpm run ncu:root && pnpm run ncu:monorepo",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages ./pods",
     "pnpm:upgrade": "pnpm update --latest --recursive \"!solc\" \"!@next-auth/prisma-adapter\" \"next-auth\" \"!@trpc/*\"",
     "prepare": "husky install",
@@ -107,6 +112,7 @@
     "commitlint": "^17.7.0",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
+    "depcheck": "^1.4.3",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
     "esbuild": "^0.19.0",
@@ -132,6 +138,7 @@
     "license-check-and-add": "^4.0.5",
     "lint-staged": "^13.2.3",
     "neonctl": "^1.20.0",
+    "npm-check-updates": "^16.10.18",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
     "postcss": "^8.4.27",
