--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -13,6 +13,7 @@
     "**/.gitkeep",
     "**/.gitignore",
     "**/.*rc.js",
+    "**/.*rc.yml",
     "**/.*ignore",
     "**/.gradle*",
     "**/.pnpm*",
