--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -54,17 +54,17 @@
     "@storybook/addon-styling": "^1.3.6",
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
-    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
-    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
+    "@trpc/client": "10",
+    "@trpc/next": "10",
+    "@trpc/react-query": "10",
+    "@trpc/server": "10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "connectkit": "^1.5.0",
+    "connectkit": "^1.5.1",
     "date-fns": "^2.30.0",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.265.0",
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
@@ -82,37 +82,37 @@
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@storybook/addon-actions": "^7.2.2",
-    "@storybook/addon-backgrounds": "^7.2.2",
-    "@storybook/addon-docs": "^7.2.2",
-    "@storybook/addon-essentials": "^7.2.2",
-    "@storybook/addon-interactions": "^7.2.2",
-    "@storybook/addon-links": "^7.2.2",
-    "@storybook/addon-measure": "^7.2.2",
-    "@storybook/addon-outline": "^7.2.2",
+    "@storybook/addon-actions": "^7.2.3",
+    "@storybook/addon-backgrounds": "^7.2.3",
+    "@storybook/addon-docs": "^7.2.3",
+    "@storybook/addon-essentials": "^7.2.3",
+    "@storybook/addon-interactions": "^7.2.3",
+    "@storybook/addon-links": "^7.2.3",
+    "@storybook/addon-measure": "^7.2.3",
+    "@storybook/addon-outline": "^7.2.3",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^7.2.2",
-    "@storybook/channel-postmessage": "^7.2.2",
-    "@storybook/channel-websocket": "^7.2.2",
-    "@storybook/client-api": "^7.2.2",
-    "@storybook/nextjs": "^7.2.2",
-    "@storybook/preview-api": "7.2.2",
-    "@storybook/preview-web": "^7.2.2",
-    "@storybook/react": "^7.2.2",
-    "@storybook/react-vite": "^7.2.2",
+    "@storybook/addons": "^7.2.3",
+    "@storybook/channel-postmessage": "^7.2.3",
+    "@storybook/channel-websocket": "^7.2.3",
+    "@storybook/client-api": "^7.2.3",
+    "@storybook/nextjs": "^7.2.3",
+    "@storybook/preview-api": "7.2.3",
+    "@storybook/preview-web": "^7.2.3",
+    "@storybook/react": "^7.2.3",
+    "@storybook/react-vite": "^7.2.3",
     "@storybook/testing-library": "0.2.0",
-    "@types/node": "^20.4.9",
+    "@types/node": "^20.4.10",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "shadcn-ui": "^0.3.0",
-    "storybook": "^7.2.2",
+    "storybook": "^7.2.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "unist-builder": "^4.0.0",
     "unist-util-visit": "^5.0.0",
-    "vite": "^4.0.4"
+    "vite": "^4.4.9"
   },
   "peerDependencies": {
     "esbuild": "^0.17.3"
