--- a/fly/consumer/fly.toml
+++ b/fly/consumer/fly.toml
@@ -17,9 +17,9 @@ kill_timeout = "5s"
 [http_service]
   internal_port = 3002
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   [http_service.concurrency]
     type = "requests"
     hard_limit = 250
@@ -34,3 +34,7 @@ kill_timeout = "5s"
     grace_period = "30s"
     method = "get"
     path = "/health"
+
+[metrics]
+  port = 3002
+  path = "/metrics"
