--- a/package.json
+++ b/package.json
@@ -163,5 +163,10 @@
     "vitest": "^0.34.1",
     "vitest-solidity-coverage": "^0.1.3"
   },
-  "packageManager": "pnpm@8.6.9"
+  "packageManager": "pnpm@8.6.9",
+  "pnpm": {
+    "patchedDependencies": {
+      "@trpc/next@10.32.1-alpha-actions-2-2023-08-09-10-23-47.45": "patches/@trpc__next@10.32.1-alpha-actions-2-2023-08-09-10-23-47.45.patch"
+    }
+  }
 }
