--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -36,10 +36,10 @@
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
-    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
     "connectkit": "^1.5.1",
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.13",
