--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -46,10 +46,10 @@
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
-    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45+696472da3",
+    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
     "@types/node": "^20.4.10",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
