--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -87,6 +87,7 @@
     "**/build/**",
     "**/coverage/**",
     "**/debug/**",
+    "**/docs/**",
     "**/fastlane/**",
     "**/gradle/**",
     "**/lib/**",
