feat: ini consumer v2 (#388)
* perf: ini consumer

* feat: ini consumer

* fix: add patch for proceddure

* chore: update

* chore: update

* chore: update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
   "[toml]": {
     "editor.defaultFormatter": "tamasfe.even-better-toml"
   },
+  "[typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
   // Exclude generated files
   "files.exclude": {
     "**/plonk_vk.sol": true,
