--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@
   anvil = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
   autometrics = { version = "*" }
   axum = "0.6.18"
+  backon = "0.4.1"
   byteorder = "1.4.3"
   chrono = "0.4.26"
   clap = "4.3.12"
