--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -13,7 +13,7 @@
   anyhow = { workspace = true }
   autometrics = { workspace = true }
   axum = { workspace = true }
-  backon = "0.4.1"
+  backon = { workspace = true }
   byteorder = { workspace = true }
   chrono = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
