feat: ini checksum

--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -23,7 +23,9 @@
   lazy_static = { workspace = true }
   lightdotso-db = { workspace = true }
   lightdotso-discord = { workspace = true }
+  lightdotso-kafka = { workspace = true }
   lightdotso-prisma = { workspace = true }
+  lightdotso-redis = { workspace = true }
   lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
   redb = { workspace = true }
