--- a/crates/redis/Cargo.toml
+++ b/crates/redis/Cargo.toml
@@ -7,3 +7,6 @@
   license.workspace = true
   homepage.workspace = true
   repository.workspace = true
+
+[dependencies]
+  redis = { version = "0.23.2", features = ["tls-native-tls"] }
