--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,36 +29,36 @@ jobs:
   rust:
     strategy:
       matrix:
-        name: ["Workspace", "Android", "iOS"]
-        os: ["ubuntu-latest"]
-        target: ["x86_64-unknown-linux-gnu"]
-        package: ["--workspace"]
+        name: [Workspace, Android, iOS]
+        os: [ubuntu-latest]
+        target: [x86_64-unknown-linux-gnu]
+        package: [--workspace]
         clippy: [true]
         test: [true]
         workspace: [true]
         partition: [1, 2, 3]
         job-total: [3]
         exclude:
-          - name: "Android"
+          - name: Android
             partition: 2
-          - name: "Android"
+          - name: Android
             partition: 3
-          - name: "iOS"
+          - name: iOS
             partition: 2
-          - name: "iOS"
+          - name: iOS
             partition: 3
         include:
-          - name: "Android"
-            package: "--package lightwallet-core"
+          - name: Android
+            package: --package lightwallet-core
             clippy: false
             test: false
             workspace: false
-            partition: 1
-            job-total: 1
-          - name: "iOS"
-            os: ["macos-latest"]
-            target: ["x86_64-apple-darwin"]
-            package: "--package lightwallet-core"
+            partition: null
+            job-total: null
+          - name: iOS
+            os: macos-latest
+            target: x86_64-apple-darwin
+            package: --package lightwallet-core
             clippy: false
             workspace: false
             partition: 1
