--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,37 +29,47 @@ jobs:
   rust:
     strategy:
       matrix:
-        name: [Workspace, Android, iOS]
-        os: [ubuntu-latest]
-        target: [x86_64-unknown-linux-gnu]
-        package: [--workspace]
-        clippy: [true]
-        test: [true]
-        workspace: [true]
-        partition: [1, 2, 3]
-        job-total: [3]
-        exclude:
-          - name: Android
-            partition: 2
-          - name: Android
-            partition: 3
-          - name: iOS
-            partition: 2
-          - name: iOS
-            partition: 3
         include:
+          - name: Workspace
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            package: --workspace
+            clippy: true
+            test: true
+            workspace: true
+            partition: 1
+            job-total: 3
+          - name: Workspace
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            package: --workspace
+            clippy: true
+            test: true
+            workspace: true
+            partition: 2
+            job-total: 3
+          - name: Workspace
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            package: --workspace
+            clippy: true
+            test: true
+            workspace: true
+            partition: 3
+            job-total: 3
           - name: Android
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
             package: --package lightwallet-core
             clippy: false
             test: false
             workspace: false
-            partition: null
-            job-total: null
           - name: iOS
             os: macos-latest
             target: x86_64-apple-darwin
             package: --package lightwallet-core
             clippy: false
+            test: true
             workspace: false
             partition: 1
             job-total: 1
