--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -86,11 +86,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Rust Install
         uses: wallet-rs/wallet-rs/.github/actions/rust-install@main
-      - name: Rust Format Check
-        run: |
-          cargo fmt --all --check
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
+      - name: Free disk
+        run: |
+          sudo swapoff -a
+          sudo rm -f /swapfile
+          sudo apt clean
+          docker rmi $(docker image ls -aq)
+          df -h
       - if: matrix.workspace
         name: Node Build
         run: |
@@ -106,6 +110,9 @@ jobs:
       - name: Make Prisma
         run: |
           pnpm turbo run prisma
+      - name: Rust Format Check
+        run: |
+          cargo fmt --all --check
       - if: matrix.workspace
         name: Deny Check
         run: |
