--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -88,6 +88,7 @@ jobs:
         name: Free Disk Space
         uses: jlumbroso/free-disk-space@main
         with:
+          large-packages: false
           tool-cache: false
       - name: Rust Install
         uses: wallet-rs/wallet-rs/.github/actions/rust-install@main
