--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -18,7 +18,7 @@
     "prometheus-exporter",
     "exemplars-tracing",
   ] }
-  axum = { workspace = true, features = ["http2", "tokio"] }
+  axum = { workspace = true }
   clap = { workspace = true, features = ["env"] }
   dotenvy = { workspace = true }
   eyre = { workspace = true }
