--- a/fly/prometheus/fly.toml
+++ b/fly/prometheus/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for lightdotso-indexer on 2023-07-17T01:35:40-07:00
+# fly.toml app configuration file generated for lightdotso-prometheus on 2023-08-17T10:25:19-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
