perf: ini prometheus (#405)
* perf: ini prometheus

* perf: ini api v1 router

--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -18,12 +18,13 @@
     "prometheus-exporter",
     "exemplars-tracing",
   ] }
-  axum = { workspace = true, features = ["http2", "tokio"] }
+  axum = { workspace = true }
   clap = { workspace = true, features = ["env"] }
   dotenvy = { workspace = true }
   eyre = { workspace = true }
   http = { workspace = true }
   hyper = { version = "0.14", features = ["full"] }
+  hyper-rustls = "0.24.1"
   lightdotso-bundler = { workspace = true }
   lightdotso-consumer = { workspace = true }
   lightdotso-db = { workspace = true }
