feat: ini autometrics

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,6 +37,17 @@ jobs:
             clippy: true
             test: true
             workspace: true
+            partition: 1
+            job-total: 2
+          - name: Workspace
+            os: ubuntu-latest-large
+            target: x86_64-unknown-linux-gnu
+            package: --workspace
+            clippy: true
+            test: true
+            workspace: true
+            partition: 2
+            job-total: 2
           - name: Android
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -44,6 +55,8 @@ jobs:
             clippy: false
             test: false
             workspace: false
+            partition: 1
+            job-total: 1
           - name: iOS
             os: macos-latest
             target: x86_64-apple-darwin
@@ -100,7 +113,8 @@ jobs:
         name: Rust Coverage
         run: |
           cargo llvm-cov nextest --lcov --output-path lcov.info \
-          --locked --all-features ${{ matrix.package }}
+          --locked --all-features ${{ matrix.package }} \
+          --partition hash:${{ matrix.partition }}/${{ matrix.job-total }}
       - if: matrix.test
         name: Codecov
         uses: codecov/codecov-action@v3
