--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -25,6 +25,7 @@
   http = { workspace = true }
   hyper = { version = "0.14", features = ["full"] }
   hyper-rustls = "0.24.1"
+  lightdotso-autometrics = { workspace = true }
   lightdotso-bundler = { workspace = true }
   lightdotso-consumer = { workspace = true }
   lightdotso-db = { workspace = true }
