--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,7 +38,7 @@ jobs:
             test: true
             workspace: true
             partition: 1
-            job-total: 2
+            job-total: 3
           - name: Workspace
             os: ubuntu-latest-large
             target: x86_64-unknown-linux-gnu
@@ -47,7 +47,16 @@ jobs:
             test: true
             workspace: true
             partition: 2
-            job-total: 2
+            job-total: 3
+          - name: Workspace
+            os: ubuntu-latest-large
+            target: x86_64-unknown-linux-gnu
+            package: --workspace
+            clippy: true
+            test: true
+            workspace: true
+            partition: 3
+            job-total: 3
           - name: Android
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
